--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
-    "@material-ui/core": "^4.11.1",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@svgr/webpack": "5.4.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -48,7 +48,7 @@
     "jest-watch-typeahead": "0.6.1",
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "0.11.3",
-    "node-sass": "^4.14.1",
+    "node-sass": "^4.14.0",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
@@ -63,11 +63,9 @@
     "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
     "react-refresh": "^0.8.3",
-    "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "8.0.2",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
@@ -166,7 +164,7 @@
     "@types/react-color": "^3.0.4",
     "commitizen": "^4.2.2",
     "cz-conventional-changelog": "^3.3.0",
-    "husky": "^4.3.0"
+    "husky": "^5.0.6"
   },
   "husky": {
     "hooks": {
@@ -176,20 +174,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "node_modules/cz-conventional-changelog"
     }
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "commitlint.config.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SeNsuos/bee-editor.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SeNsuos/bee-editor/issues"
-  },
-  "homepage": "https://github.com/SeNsuos/bee-editor#readme"
+  }
 }
